--- a/classes/_local_main_.userdata.html
+++ b/classes/_local_main_.userdata.html
@@ -103,7 +103,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/99b03ca/main.d.ts#L92">main.d.ts:92</a></li>
+									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/7ffd677/main.d.ts#L122">main.d.ts:122</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -129,7 +129,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/99b03ca/main.d.ts#L90">main.d.ts:90</a></li>
+									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/7ffd677/main.d.ts#L120">main.d.ts:120</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -152,7 +152,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/99b03ca/main.d.ts#L96">main.d.ts:96</a></li>
+									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/7ffd677/main.d.ts#L126">main.d.ts:126</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -175,7 +175,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/99b03ca/main.d.ts#L94">main.d.ts:94</a></li>
+									<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/7ffd677/main.d.ts#L124">main.d.ts:124</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -312,6 +312,9 @@
 						<a href="../modules/_local_main_.html#addipcasynclistener" class="tsd-kind-icon">add<wbr>Ipc<wbr>Async<wbr>Listener</a>
 					</li>
 					<li class=" tsd-kind-function tsd-parent-kind-module">
+						<a href="../modules/_local_main_.html#childprocessmessagepromisefactory" class="tsd-kind-icon">child<wbr>Process<wbr>Message<wbr>Promise<wbr>Factory</a>
+					</li>
+					<li class=" tsd-kind-function tsd-parent-kind-module">
 						<a href="../modules/_local_main_.html#execfilepromise" class="tsd-kind-icon">exec<wbr>File<wbr>Promise</a>
 					</li>
 					<li class=" tsd-kind-function tsd-parent-kind-module">
@@ -319,6 +322,9 @@
 					</li>
 					<li class=" tsd-kind-function tsd-parent-kind-module">
 						<a href="../modules/_local_main_.html#sendipcevent" class="tsd-kind-icon">sendIPCEvent</a>
+					</li>
+					<li class=" tsd-kind-function tsd-parent-kind-module">
+						<a href="../modules/_local_main_.html#workerfork" class="tsd-kind-icon">worker<wbr>Fork</a>
 					</li>
 				</ul>
 			</nav>
