--- a/interfaces/_local_.siteorganization.html
+++ b/interfaces/_local_.siteorganization.html
@@ -83,6 +83,7 @@
 							<h3>Properties</h3>
 							<ul class="tsd-index-list">
 								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="_local_.siteorganization.html#isstarred" class="tsd-kind-icon">is<wbr>Starred</a></li>
+								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="_local_.siteorganization.html#sortdata" class="tsd-kind-icon">sort<wbr>Data</a></li>
 							</ul>
 						</section>
 					</div>
@@ -96,9 +97,27 @@
 					<div class="tsd-signature tsd-kind-icon">is<wbr>Starred<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">boolean</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/99b03ca/index.d.ts#L278">index.d.ts:278</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/7ffd677/index.d.ts#L278">index.d.ts:278</a></li>
 						</ul>
 					</aside>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface">
+					<a name="sortdata" class="tsd-anchor"></a>
+					<h3><span class="tsd-flag ts-flagOptional">Optional</span> sort<wbr>Data</h3>
+					<div class="tsd-signature tsd-kind-icon">sort<wbr>Data<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol">{ </span>siteLastStartedTimestamp<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">number</span><span class="tsd-signature-symbol"> }</span></div>
+					<aside class="tsd-sources">
+						<ul>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/7ffd677/index.d.ts#L279">index.d.ts:279</a></li>
+						</ul>
+					</aside>
+					<div class="tsd-type-declaration">
+						<h4>Type declaration</h4>
+						<ul class="tsd-parameters">
+							<li class="tsd-parameter">
+								<h5>site<wbr>Last<wbr>Started<wbr>Timestamp<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">number</span></h5>
+							</li>
+						</ul>
+					</div>
 				</section>
 			</section>
 		</div>
@@ -170,6 +189,9 @@
 						<ul>
 							<li class=" tsd-kind-property tsd-parent-kind-interface">
 								<a href="_local_.siteorganization.html#isstarred" class="tsd-kind-icon">is<wbr>Starred</a>
+							</li>
+							<li class=" tsd-kind-property tsd-parent-kind-interface">
+								<a href="_local_.siteorganization.html#sortdata" class="tsd-kind-icon">sort<wbr>Data</a>
 							</li>
 						</ul>
 					</li>
