--- a/interfaces/_local_main_.iappstate.html
+++ b/interfaces/_local_main_.iappstate.html
@@ -106,7 +106,7 @@
 					<div class="tsd-signature tsd-kind-icon">addon<wbr>Statuses<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol">{}</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/99b03ca/main.d.ts#L542">main.d.ts:542</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/7ffd677/main.d.ts#L572">main.d.ts:572</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-type-declaration">
@@ -124,7 +124,7 @@
 					<div class="tsd-signature tsd-kind-icon">addons<span class="tsd-signature-symbol">:</span> <a href="_local_.addonpackage.html" class="tsd-signature-type">AddonPackage</a><span class="tsd-signature-symbol">[]</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/99b03ca/main.d.ts#L539">main.d.ts:539</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/7ffd677/main.d.ts#L569">main.d.ts:569</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -134,7 +134,7 @@
 					<div class="tsd-signature tsd-kind-icon">current<wbr>Workspace<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">null</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/99b03ca/main.d.ts#L548">main.d.ts:548</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/7ffd677/main.d.ts#L578">main.d.ts:578</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -144,7 +144,7 @@
 					<div class="tsd-signature tsd-kind-icon">enabled<wbr>Addons<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol">{}</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/99b03ca/main.d.ts#L540">main.d.ts:540</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/7ffd677/main.d.ts#L570">main.d.ts:570</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-type-declaration">
@@ -162,7 +162,7 @@
 					<div class="tsd-signature tsd-kind-icon">flyAPI<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">any</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/99b03ca/main.d.ts#L547">main.d.ts:547</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/7ffd677/main.d.ts#L577">main.d.ts:577</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -172,7 +172,7 @@
 					<div class="tsd-signature tsd-kind-icon">flywheel<wbr>Teams<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">any</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/99b03ca/main.d.ts#L546">main.d.ts:546</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/7ffd677/main.d.ts#L576">main.d.ts:576</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -182,7 +182,7 @@
 					<div class="tsd-signature tsd-kind-icon">flywheel<wbr>User<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">any</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/99b03ca/main.d.ts#L545">main.d.ts:545</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/7ffd677/main.d.ts#L575">main.d.ts:575</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -192,7 +192,7 @@
 					<div class="tsd-signature tsd-kind-icon">loaded<wbr>Addons<span class="tsd-signature-symbol">:</span> <a href="_local_.addonpackage.html" class="tsd-signature-type">AddonPackage</a><span class="tsd-signature-symbol">[]</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/99b03ca/main.d.ts#L541">main.d.ts:541</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/7ffd677/main.d.ts#L571">main.d.ts:571</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -202,7 +202,7 @@
 					<div class="tsd-signature tsd-kind-icon">selected<wbr>Sites<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">SiteJSON</span><span class="tsd-signature-symbol">[</span><span class="tsd-signature-type">"id"</span><span class="tsd-signature-symbol">]</span><span class="tsd-signature-symbol">[]</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/99b03ca/main.d.ts#L544">main.d.ts:544</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/7ffd677/main.d.ts#L574">main.d.ts:574</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -212,7 +212,7 @@
 					<div class="tsd-signature tsd-kind-icon">site<wbr>Statuses<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-symbol">{}</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/99b03ca/main.d.ts#L538">main.d.ts:538</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/7ffd677/main.d.ts#L568">main.d.ts:568</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-type-declaration">
@@ -230,7 +230,7 @@
 					<div class="tsd-signature tsd-kind-icon">updated<wbr>Addons<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">AddonPackage</span><span class="tsd-signature-symbol">[</span><span class="tsd-signature-type">"name"</span><span class="tsd-signature-symbol">]</span><span class="tsd-signature-symbol">[]</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/99b03ca/main.d.ts#L543">main.d.ts:543</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/7ffd677/main.d.ts#L573">main.d.ts:573</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -376,6 +376,9 @@
 						<a href="../modules/_local_main_.html#addipcasynclistener" class="tsd-kind-icon">add<wbr>Ipc<wbr>Async<wbr>Listener</a>
 					</li>
 					<li class=" tsd-kind-function tsd-parent-kind-module">
+						<a href="../modules/_local_main_.html#childprocessmessagepromisefactory" class="tsd-kind-icon">child<wbr>Process<wbr>Message<wbr>Promise<wbr>Factory</a>
+					</li>
+					<li class=" tsd-kind-function tsd-parent-kind-module">
 						<a href="../modules/_local_main_.html#execfilepromise" class="tsd-kind-icon">exec<wbr>File<wbr>Promise</a>
 					</li>
 					<li class=" tsd-kind-function tsd-parent-kind-module">
@@ -383,6 +386,9 @@
 					</li>
 					<li class=" tsd-kind-function tsd-parent-kind-module">
 						<a href="../modules/_local_main_.html#sendipcevent" class="tsd-kind-icon">sendIPCEvent</a>
+					</li>
+					<li class=" tsd-kind-function tsd-parent-kind-module">
+						<a href="../modules/_local_main_.html#workerfork" class="tsd-kind-icon">worker<wbr>Fork</a>
 					</li>
 				</ul>
 			</nav>
