--- a/interfaces/_local_main_.selectablesiteservice.html
+++ b/interfaces/_local_main_.selectablesiteservice.html
@@ -107,7 +107,7 @@
 					<div class="tsd-signature tsd-kind-icon">bin<wbr>Version<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/99b03ca/main.d.ts#L125">main.d.ts:125</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/7ffd677/main.d.ts#L155">main.d.ts:155</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -127,7 +127,7 @@
 					<div class="tsd-signature tsd-kind-icon">label<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/99b03ca/main.d.ts#L110">main.d.ts:110</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/7ffd677/main.d.ts#L140">main.d.ts:140</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -147,7 +147,7 @@
 					<div class="tsd-signature tsd-kind-icon">name<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/99b03ca/main.d.ts#L104">main.d.ts:104</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/7ffd677/main.d.ts#L134">main.d.ts:134</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -167,7 +167,7 @@
 					<div class="tsd-signature tsd-kind-icon">version<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/99b03ca/main.d.ts#L118">main.d.ts:118</a></li>
+							<li>Defined in <a href="https://github.com/getflywheel/local-addon-api/blob/7ffd677/main.d.ts#L148">main.d.ts:148</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -303,6 +303,9 @@
 						<a href="../modules/_local_main_.html#addipcasynclistener" class="tsd-kind-icon">add<wbr>Ipc<wbr>Async<wbr>Listener</a>
 					</li>
 					<li class=" tsd-kind-function tsd-parent-kind-module">
+						<a href="../modules/_local_main_.html#childprocessmessagepromisefactory" class="tsd-kind-icon">child<wbr>Process<wbr>Message<wbr>Promise<wbr>Factory</a>
+					</li>
+					<li class=" tsd-kind-function tsd-parent-kind-module">
 						<a href="../modules/_local_main_.html#execfilepromise" class="tsd-kind-icon">exec<wbr>File<wbr>Promise</a>
 					</li>
 					<li class=" tsd-kind-function tsd-parent-kind-module">
@@ -310,6 +313,9 @@
 					</li>
 					<li class=" tsd-kind-function tsd-parent-kind-module">
 						<a href="../modules/_local_main_.html#sendipcevent" class="tsd-kind-icon">sendIPCEvent</a>
+					</li>
+					<li class=" tsd-kind-function tsd-parent-kind-module">
+						<a href="../modules/_local_main_.html#workerfork" class="tsd-kind-icon">worker<wbr>Fork</a>
 					</li>
 				</ul>
 			</nav>
